# Opal-to-Ocean-Technical-Analytics-Documentation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
data/: .gitignore
data/marts/: sydney_day_samples.csv  what_if_scenarios.csv
notebooks/: 01_build_fact_day.ipynb  02_eda_results.ipynb
scripts/: check_fact_day.py
src/ingest/: __init__.py  abs_sa2.py  air_quality.py  base.py  beachwatch.py  jobs.py  pedestrian.py  tfnws.py  utils.py
src/opal_ocean/: cli.py  logging.py  paths.py
src/opal_ocean/ingest/: parsers.py  pipeline.py  synthetic.py
src/opal_ocean/quality/: checks.py  report.py
src/opal_ocean/transform/: pipeline.py
src/quality/: checks.py
src/transform/: run_marts.py
src/transform/sql/: dim_commute_mode.sql  dim_environment_metric.sql  stg_commute_day.sql  stg_env_day.sql
tests/parsers/: test_beachwatch_parser.py
tests/quality/: test_checks.py
tests/transformations/: test_fact_day_transformation.py  test_run_transforms_pipeline.py
tests/transformations/data/: commute.csv  environment.csv  fact_day_expected.csv  personal.csv  stg_commute_day.csv  stg_env_day.csv  stg_personal_day.csv
