[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-to-ocean"
version = "0.1.0"
description = "Synthetic pipelines and quality checks for the Opal to Ocean project"
authors = [{ name = "Opal to Ocean" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103"]
